{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 130,
  "lineage": "6e61a425-91de-4ae5-1fd3-555aa1f78dc4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686528375615:vpc/vpc-07fe6333d20045969",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02df13e8017b40914",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-000b5ef691e346bf2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07fe6333d20045969",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc5948a81548127a",
            "owner_id": "686528375615"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686528375615:security-group/sg-0600e756a166483ac",
            "description": "Security Group for AWS DMS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0600e756a166483ac",
            "ingress": [],
            "name": "logistics-dev-dms-sg",
            "name_prefix": "",
            "owner_id": "686528375615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Lakshit",
              "Project": "logistics"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Lakshit",
              "Project": "logistics"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe6333d20045969"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686528375615:security-group/sg-0dbfdbf24c6f58d23",
            "description": "Security Group for MySQL RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbfdbf24c6f58d23",
            "ingress": [
              {
                "cidr_blocks": [
                  "182.77.75.139/32"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "AWS DMS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0600e756a166483ac"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "logistics-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "686528375615",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Lakshit",
              "Project": "logistics"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe6333d20045969"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dms",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}